# atome-lm

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.de.md  CODE_OF_CONDUCT.es.md  CODE_OF_CONDUCT.fr.md  CODE_OF_CONDUCT.ja.md  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.zh-CN.md  CONTRIBUTING.de.md  CONTRIBUTING.es.md  CONTRIBUTING.fr.md  CONTRIBUTING.ja.md  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  FRONTIER.de.md  FRONTIER.es.md  FRONTIER.fr.md  FRONTIER.ja.md  FRONTIER.md  FRONTIER.zh-CN.md  HONEST_RESULTS.de.md  HONEST_RESULTS.es.md  HONEST_RESULTS.fr.md  HONEST_RESULTS.ja.md  HONEST_RESULTS.md  HONEST_RESULTS.zh-CN.md  LICENSE  NOTICE  PAPER.de.md  PAPER.es.md  PAPER.fr.md  PAPER.ja.md  PAPER.md  PAPER.zh-CN.md  PICORV32_TANGNANO9K_PLAN.md  PROJECT_CONTENT.de.md  PROJECT_CONTENT.es.md  PROJECT_CONTENT.fr.md  PROJECT_CONTENT.ja.md  PROJECT_CONTENT.md  (+24 more)
.github/workflows/: test.yml
atome_llm/: __init__.py  distill.py  tokenize.py
atome_llm/baselines/: __init__.py  vanilla_transformer.py
atome_llm/core/: __init__.py  atome_lm.py  mcu_block.py  p3_packing.py  power3.py  router.py  sparse_attention.py  ssm.py  ternary.py  ternary_conv.py  ternary_embedding.py  ternary_linear.py  trit_packing.py
atome_llm/utils/: __init__.py  runtime.py
c_engine/: Q15_PROPOSAL.de.md  Q15_PROPOSAL.es.md  Q15_PROPOSAL.fr.md  Q15_PROPOSAL.ja.md  Q15_PROPOSAL.md  Q15_PROPOSAL.zh-CN.md  RAM_TABLE.de.md  RAM_TABLE.es.md  RAM_TABLE.fr.md  RAM_TABLE.ja.md  RAM_TABLE.md  RAM_TABLE.zh-CN.md  README.de.md  README.es.md  README.fr.md  README.ja.md  README.md  README.zh-CN.md
c_engine/experiments/delta_inference/: Makefile  RESULTS.de.md  RESULTS.es.md  RESULTS.fr.md  RESULTS.ja.md  RESULTS.md  RESULTS.zh-CN.md  bench.c  bench_real  bench_real.c  capture_real.py  delta_matvec.c  delta_matvec.h  quality_real.py
c_engine/superesp/: classify_main.c  superesp_os.c
c_engine/targets/cortex-m3-gen/: Makefile  firmware.c
c_engine/targets/cortex-m3-ram/: Makefile  firmware.c  startup.s
c_engine/targets/rp2040/: CMakeLists.txt  README.de.md  README.es.md  README.fr.md  README.ja.md  README.md  README.zh-CN.md  main.c  pico_sdk_import.cmake
checkpoints/: atome_1m_v1.pt  atome_1m_v1.train.json  vanilla_1m_v1.pt  vanilla_1m_v1.train.json
data/: sample.txt
hardware/esp32-wroom32/: .gitignore  README.de.md  README.es.md  README.fr.md  README.ja.md  README.md  README.zh-CN.md  atome.sh
hardware/esp32-wroom32/firmware/main/: CMakeLists.txt  atome.c  atome.h  main.c  model_full.atome  model_toy.atome
hardware/tangnano9k/: README.md
scripts/: benchmark.py  budget.py  build_corpus.py  cross_compile.py  demo.py  evaluate.py  export_to_atome.py  export_to_atome_p3.py  export_to_atome_packed.py  gen_nano_checkpoint.py  inspect_atome.py  measure_ram.py  multiseed_aggregate.py  run_ab_sweep.py  run_extended_sweep.py  run_qemu.py  run_qemu_gen.py  run_qemu_tinystories.py  train_atome_1m.py  train_demo.py  train_vanilla_1m.py
superesp/: HONEST_RESULTS.de.md  HONEST_RESULTS.es.md  HONEST_RESULTS.fr.md  HONEST_RESULTS.ja.md  HONEST_RESULTS.md  HONEST_RESULTS.zh-CN.md  README.de.md  README.es.md  README.fr.md  README.ja.md  README.md  README.zh-CN.md  RELEASE_NOTES_v2.0.de.md  RELEASE_NOTES_v2.0.es.md  RELEASE_NOTES_v2.0.fr.md  RELEASE_NOTES_v2.0.ja.md  RELEASE_NOTES_v2.0.md  RELEASE_NOTES_v2.0.zh-CN.md  __init__.py  attest_all.py  cli.py  demo.py  make_results_doc.py  qemu_test.py  targets.py  train_all.py
superesp/artifacts/: ATTESTATION.json  PARITY.json  RESULTS.json  agri.atomecl  agri.att.json  agri.tok.json  air.atomecl  air.att.json  air.tok.json  anomaly.atomecl  anomaly.att.json  anomaly.tok.json  forecast.atomecl  forecast.att.json  forecast.tok.json  motion.atomecl  motion.att.json  motion.tok.json  occupancy.atomecl  occupancy.att.json  occupancy.tok.json  os_telem.atomecl  os_telem.att.json  os_telem.tok.json  power.atomecl  power.att.json  power.tok.json  sound_scene.atomecl  sound_scene.att.json  sound_scene.tok.json  suite_pubkey.txt  voice.atomecl  voice.att.json  voice.tok.json  water.atomecl  water.att.json  water.tok.json  wearable.atomecl  wearable.att.json  wearable.tok.json
superesp/attest/: __init__.py  sign.py
superesp/datasets/: __init__.py  agri.py  air.py  anomaly.py  csv_head.py  forecast.py  motion.py  occupancy.py  os_telem.py  power.py  regression.py  sound_scene.py  voice.py  water.py  wearable.py
superesp/esp32/: README.de.md  README.es.md  README.fr.md  README.ja.md  README.md  README.zh-CN.md  battery_data.h  battery_main.c  capture.py  gen_agri_calib.py  gen_battery.py  golden.json  install.sh  parse_report.py  run_battery.sh
superesp/esp32/firmware/main/: CMakeLists.txt
superesp/esp32/firmware_agri/main/: CMakeLists.txt  agri_calib.h  agri_main.c
superesp/esp32/firmware_logger/main/: CMakeLists.txt  logger_main.c
superesp/firmware/: CMakeLists.txt  README.de.md  README.es.md  README.fr.md  README.ja.md  README.md  README.zh-CN.md
superesp/firmware/main/: CMakeLists.txt  superesp_main.c
superesp/framework/: __init__.py  abstain.py  audio.py  audit.py  config.py  delta.py  editable.py  export.py  model.py  novelty.py  parity.py  report.py  streaming.py  tokenize.py  train.py
superesp/heads/: __init__.py
superesp/runtime/: __init__.py  dispatcher.py
superesp/tests/: test_attest.py  test_audit.py  test_csv_cli.py  test_customization.py  test_dispatch.py  test_editable.py  test_framework.py  test_novelty.py  test_parity.py  test_streaming.py  test_targets.py  test_zoo.py
superesp/zoo/: __init__.py  index.html  registry.json  registry.py
tests/: test_ablation.py  test_atome_lm.py  test_build_corpus.py  test_distill.py  test_export_format.py  test_export_p3.py  test_export_packed.py  test_mcu_block.py  test_p3_packing.py  test_parity_multitoken.py  test_parity_with_c.py  test_power3.py  test_qemu_parity.py  test_router.py  test_sampling.py  test_ssm.py  test_ternary.py  test_ternary_conv.py  test_ternary_embedding.py  test_ternary_linear.py  test_tokenize.py  test_trit_packing.py  test_vanilla_baseline.py
tests/c_parity/: parity_main.c  parity_multitoken.c
(+70 files in other folders)
