[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atome-llm"
version = "0.3.0"
description = "Atome LM — a tiny ternary language model designed for microcontroller deployment via the Atome C99 inference engine."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Atome LM contributors" }]
keywords = ["llm", "ternary", "bitnet", "microcontroller", "embedded", "edge-ai", "tinyml"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Embedded Systems",
]
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
]

[project.urls]
Homepage = "https://atomelm.com"
Demo = "https://atomelm.com/demo.html"

[project.optional-dependencies]
dev = ["pytest>=7", "cryptography>=41", "scipy>=1.10"]
# SuperESP (v2) runtime extras: Ed25519 attestation + audio/voice feature extraction
# (+ pyserial for on-device log capture). Install with: pip install -e ".[superesp]"
superesp = ["cryptography>=41", "scipy>=1.10", "pyserial>=3.5", "esptool>=4.7"]

[tool.setuptools.packages.find]
include = ["atome_llm*"]
